--- a/ICT13580068A/MenuPage.xaml
+++ b/ICT13580068A/MenuPage.xaml
@@ -4,7 +4,7 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 	x:Class="ICT13580068A.MenuPage"
     Title="Menu"
-    Icon="menu">
+    Icon="menu (1)">
 
     <Grid>
 
